unpackaged/main/default/objects/Lead/fields/Past_Rep_Short_Term__c.field-meta.xml
<CustomField>
    <fullName>Past_Rep_Short_Term__c</fullName>
    <description>Field to specify short-term reassignments and who to return lead ownership to. Visible only to system admin profile.</description>
    <label>Past Rep Short Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Michelle Lewis</fullName>
            </value>
            <value>
                <fullName>Tim Lewis</fullName>
            </value>
            <value>
                <fullName>David Bass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>