unpackaged/main/default/objects/Lead/fields/Paydex_Band__c.field-meta.xml
<CustomField>
    <fullName>Paydex_Band__c</fullName>
    <description>Paydex Score Range.</description>
    <inlineHelpText>Paydex Score Range.</inlineHelpText>
    <label>Paydex Band</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>