unpackaged/main/default/objects/Lead/fields/Paydex_Score__c.field-meta.xml
<CustomField>
    <fullName>Paydex_Score__c</fullName>
    <description>Paydex is a score provided by dunn and Bradstreet that indicates propensity to pay bills.  Used for marketing purposes.</description>
    <inlineHelpText>Paydex is a score provided by dunn and Bradstreet that indicates propensity to pay bills.  Used for marketing purposes.</inlineHelpText>
    <label>Paydex Score</label>
    <length>16</length>
    <type>Text</type>
</CustomField>