unpackaged/main/default/objects/Lead/fields/Principal_Consumer_Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>Principal_Consumer_Risk_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most influential Consumer Risk Summary that should be used for lead prioritization.</description>
    <label>Principal Consumer Risk Summary</label>
    <referenceTo>Consumer_Risk_Summary__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>