unpackaged/main/default/objects/Lead/fields/Promotion_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Call_List__c</fullName>
    <description>Field to sort call lists for the promotion.</description>
    <inlineHelpText>Field to sort call lists for the promotion.</inlineHelpText>
    <label>Promotion Call List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Week 3</fullName>
            </value>
            <value>
                <fullName>Week 4</fullName>
            </value>
            <value>
                <fullName>Week 5</fullName>
            </value>
            <value>
                <fullName>Week 6</fullName>
            </value>
            <value>
                <fullName>Week 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>