unpackaged/main/default/objects/Lead/fields/QB_Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>QB_Marketing_Cloud_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if this lead is synced with the QB Marketing Cloud instance. Introduced to support the QB migration into NF. Originally will be populated by data engineering</description>
    <label>QB Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>