unpackaged/main/default/objects/Lead/fields/QB_Marketing_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>QB_Marketing_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated via sync from Marketing Cloud specifically for QB branded material</description>
    <label>QB Marketing Opt Out</label>
    <type>Checkbox</type>
</CustomField>