unpackaged/main/default/objects/Lead/fields/Ready_To_Convert__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to delete Time Dependent Workflows on the lead object prior to conversion.</description>
    <inlineHelpText>This field is used to delete Time Dependent Workflows on the lead object prior to conversion.</inlineHelpText>
    <label>Ready To Convert</label>
    <type>Checkbox</type>
</CustomField>