unpackaged/main/default/objects/Lead/fields/Refer_To__c.field-meta.xml
<CustomField>
    <fullName>Refer_To__c</fullName>
    <description>The Picklist for the User to refer a lead.</description>
    <label>Refer To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Equipment Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>