unpackaged/main/default/objects/Lead/fields/Referral_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date_Time__c</fullName>
    <description>The purpose of this field is to generically capture values required by different referral sources. A mapping of what this value means to each referral source is available in Confluence documentation.  This field will capture the date and time of the referral.</description>
    <label>Referral Date/Time</label>
    <type>DateTime</type>
</CustomField>