unpackaged/main/default/objects/Lead/fields/Referral_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Name__c</fullName>
    <description>The purpose of this field is to generically capture values required by different referral sources. A mapping of what this value means to each referral source is available in Confluence documentation.  This field will capture the name of the referral source.</description>
    <label>Referral Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>