unpackaged/main/default/objects/Lead/fields/Referral_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Referral_Value_2__c</fullName>
    <label>Referral Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>