unpackaged/main/default/objects/Lead/fields/Referral_Value_4__c.field-meta.xml
<CustomField>
    <fullName>Referral_Value_4__c</fullName>
    <description>The purpose of this field is to generically capture values required by different referral sources. A mapping of what this value means to each referral source is available in Confluence documentation.</description>
    <label>Referral Value 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>