unpackaged/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>This field will capture the user that referred the customer to the other Sales Group.</description>
    <inlineHelpText>This field will capture the user that referred the customer to the other Sales Group.</inlineHelpText>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>