unpackaged/main/default/objects/Lead/fields/Rep_Ownership_Date__c.field-meta.xml
<CustomField>
    <fullName>Rep_Ownership_Date__c</fullName>
    <description>This field will indicate the date that a rep took ownership of the lead.</description>
    <inlineHelpText>This field will indicate the date that a rep took ownership of the lead.</inlineHelpText>
    <label>Rep Ownership Date</label>
    <type>Date</type>
</CustomField>