unpackaged/main/default/objects/Lead/fields/Rersponse_Date__c.field-meta.xml
<CustomField>
    <fullName>Rersponse_Date__c</fullName>
    <description>Date that the lead initially responds to marketing materials</description>
    <inlineHelpText>Date that the lead initially responds to marketing materials</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>