unpackaged/main/default/objects/Lead/fields/Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>Response_Channel__c</fullName>
    <description>Indicate the response channel used to reach this Lead</description>
    <inlineHelpText>Select the response channel used to reach this Lead</inlineHelpText>
    <label>Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Internet Activation</fullName>
            </value>
            <value>
                <fullName>Internet Application</fullName>
            </value>
            <value>
                <fullName>Internet- Lead Aggregator</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Overflow</fullName>
            </value>
            <value>
                <fullName>After Hours Voice Mail</fullName>
            </value>
            <value>
                <fullName>Dev Site</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>