unpackaged/main/default/objects/Lead/fields/Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Response_Score__c</fullName>
    <description>D&amp;B Response Score</description>
    <label>Response Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>