unpackaged/main/default/objects/Lead/fields/Response_Score_Current__c.field-meta.xml
<CustomField>
    <fullName>Response_Score_Current__c</fullName>
    <description>The current D&amp;B Marketing Model scores in the Salesforce database to make analysis of the database easier and also to lay the foundation for a potential prioritization of leads.</description>
    <label>Response Score Current</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>