unpackaged/main/default/objects/Lead/fields/Round_Robin_Flow__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Flow__c</fullName>
    <description>Identifies the flow that assigned this record to a rep.</description>
    <inlineHelpText>Identifies the flow that assigned this record to a rep.</inlineHelpText>
    <label>Round Robin Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Edge Funding</fullName>
            </value>
            <value>
                <fullName>Internet Mailer</fullName>
            </value>
            <value>
                <fullName>Lending Tree</fullName>
            </value>
            <value>
                <fullName>Lending Tree Tier 1</fullName>
            </value>
            <value>
                <fullName>Lending Tree Tier 2</fullName>
            </value>
            <value>
                <fullName>Lending Tree Tier 3</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>PPC Lease</fullName>
            </value>
            <value>
                <fullName>T1 Edge Funding</fullName>
            </value>
            <value>
                <fullName>T1 Internet Mailer</fullName>
            </value>
            <value>
                <fullName>T1 Lending Tree</fullName>
            </value>
            <value>
                <fullName>T1 Organic</fullName>
            </value>
            <value>
                <fullName>T1 PPC</fullName>
            </value>
            <value>
                <fullName>T1 PPC Lease</fullName>
            </value>
            <value>
                <fullName>T2 Edge Funding</fullName>
            </value>
            <value>
                <fullName>T2 Internet Mailer</fullName>
            </value>
            <value>
                <fullName>T2 Lending Tree</fullName>
            </value>
            <value>
                <fullName>T2 Organic</fullName>
            </value>
            <value>
                <fullName>T2 PPC</fullName>
            </value>
            <value>
                <fullName>T2 PPC Lease</fullName>
            </value>
            <value>
                <fullName>T3 Edge Funding</fullName>
            </value>
            <value>
                <fullName>T3 Internet Mailer</fullName>
            </value>
            <value>
                <fullName>T3 Lending Tree</fullName>
            </value>
            <value>
                <fullName>T3 Organic</fullName>
            </value>
            <value>
                <fullName>T3 PPC</fullName>
            </value>
            <value>
                <fullName>T3 PPC Lease</fullName>
            </value>
            <value>
                <fullName>T1 Buyerzone</fullName>
            </value>
            <value>
                <fullName>T2 Buyerzone</fullName>
            </value>
            <value>
                <fullName>T3 Buyerzone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>