unpackaged/main/default/objects/Lead/fields/RPC_Datetime__c.field-meta.xml
<CustomField>
    <fullName>RPC_Datetime__c</fullName>
    <description>Right Party Contact, value populated when Vonage Call Disposition is RPC eligible</description>
    <label>RPC Datetime</label>
    <type>DateTime</type>
</CustomField>