unpackaged/main/default/objects/Lead/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <description>The Sales Volume / Annual Revenue provided to us by the lead source.  This is for marketing purposes and tracking purposes.</description>
    <label>Sales Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>