unpackaged/main/default/objects/Lead/fields/Seek_Capital_Id__c.field-meta.xml
<CustomField>
    <fullName>Seek_Capital_Id__c</fullName>
    <label>Seek Capital Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>