unpackaged/main/default/objects/Lead/fields/Seek_Capital_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Seek_Capital_Referral_Status__c</fullName>
    <label>Seek Capital Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send to Seek</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>