unpackaged/main/default/objects/Lead/fields/Send_To_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Pardot</label>
    <type>Checkbox</type>
</CustomField>