unpackaged/main/default/objects/Lead/fields/Short_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Short_Account_Number__c</fullName>
    <description>A calculated field that is that last 8 digits of the account number.  Used for many lookups.</description>
    <inlineHelpText>A calculated field that is that last 8 digits of the account number.  Used for many lookups.</inlineHelpText>
    <label>Short Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>