unpackaged/main/default/objects/Lead/fields/SIC_Name__c.field-meta.xml
<CustomField>
    <fullName>SIC_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SIC Name for that SIC Code</description>
    <inlineHelpText>The SIC Name for that SIC Code</inlineHelpText>
    <label>SIC Name</label>
    <referenceTo>FPC_SIC__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>