unpackaged/main/default/objects/Lead/fields/SICCODE__c.field-meta.xml
<CustomField>
    <fullName>SICCODE__c</fullName>
    <description>Standard Industry Code (SIC) is a classification created by the US Government.  An SIC Code can be 2, 3, 4, or 8 digits.</description>
    <inlineHelpText>Standard Industry Code (SIC) is a classification created by the US Government.  An SIC Code can be 2, 3, 4, or 8 digits</inlineHelpText>
    <label>SIC Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>