unpackaged/main/default/objects/Lead/fields/SICName__c.field-meta.xml
<CustomField>
    <fullName>SICName__c</fullName>
    <label>SICName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>