unpackaged/main/default/objects/Lead/fields/Siftrock_Email__c.field-meta.xml
<CustomField>
    <fullName>Siftrock_Email__c</fullName>
    <formula>IF(
	ISBLANK(Owner:User.Email), "",
	LEFT(Owner:User.Email, (FIND("@", Owner:User.Email))) + "reply." + RIGHT(Owner:User.Email,LEN(Owner:User.Email)-FIND('@',Owner:User.Email))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siftrock Email</label>
    <type>Text</type>
</CustomField>