unpackaged/main/default/objects/Lead/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be utilized to capture opt in to text messages by customers.</description>
    <inlineHelpText>This field will be utilized to capture opt in to text messages by customers.</inlineHelpText>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>