unpackaged/main/default/objects/Lead/fields/SMS_Opt_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In_Date_Time__c</fullName>
    <description>The Date &amp; Time the Lead Opted in to SMS Messaging</description>
    <inlineHelpText>The Date &amp; Time the Lead Opted in to SMS Messaging</inlineHelpText>
    <label>SMS Opt In Date/Time</label>
    <type>DateTime</type>
</CustomField>