unpackaged/main/default/objects/Lead/fields/SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>