unpackaged/main/default/objects/Lead/fields/SSN_Capture_After_Activation__c.field-meta.xml
<CustomField>
    <fullName>SSN_Capture_After_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a SSN number is captured after the day that a lead was activated by the initial rep who took the call.  It will be populated by workflow.</description>
    <inlineHelpText>This field will indicate if a SSN number is captured after the day that a lead was activated by the initial rep who took the call.  It will be populated by workflow.</inlineHelpText>
    <label>SSN Capture After Activation</label>
    <type>Checkbox</type>
</CustomField>