unpackaged/main/default/objects/Lead/fields/SSN_Capture_by_Web2Lead__c.field-meta.xml
<CustomField>
    <fullName>SSN_Capture_by_Web2Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated by a workflow if a SSN was captured on a web to lead form.</description>
    <inlineHelpText>This field will be updated by a workflow if a SSN was captured on a web to lead form.</inlineHelpText>
    <label>SSN Capture by Web2Lead</label>
    <type>Checkbox</type>
</CustomField>