unpackaged/main/default/objects/Lead/fields/SSN_Captured__c.field-meta.xml
<CustomField>
    <fullName>SSN_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated by a workflow and used to determine SSN capture %.</description>
    <inlineHelpText>This field will be updated by a workflow and used to determine SSN capture %.</inlineHelpText>
    <label>SSN Captured</label>
    <type>Checkbox</type>
</CustomField>