unpackaged/main/default/objects/Lead/fields/SSN_Captured_On_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SSN_Captured_On_Activation_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a SSN number is captured on the same day that a lead was activated by the initial rep who took the call.  It will be populated by workflow.</description>
    <inlineHelpText>This field will indicate if a SSN number is captured on the same day that a lead was activated by the initial rep who took the call.  It will be populated by workflow.</inlineHelpText>
    <label>SSN Captured On Activation Date</label>
    <type>Checkbox</type>
</CustomField>