unpackaged/main/default/objects/Lead/fields/SSN_is_Blank__c.field-meta.xml
<CustomField>
    <fullName>SSN_is_Blank__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SSN is Blank</label>
    <type>Checkbox</type>
</CustomField>