unpackaged/main/default/objects/Lead/fields/SSN_Masked__c.field-meta.xml
<CustomField>
    <fullName>SSN_Masked__c</fullName>
    <formula>IF(Social_Security_Number__c = '','', 
IF($Profile.Name = 'FPC - Operations User', Social_Security_Number__c, 
IF($Profile.Name = 'System Administrator',Social_Security_Number__c,"***-**-" &amp; TRIM(RIGHT( Social_Security_Number__c ,4)))))</formula>
    <label>SSN Masked</label>
    <type>Text</type>
</CustomField>