unpackaged/main/default/objects/Lead/fields/Status_Lease__c.field-meta.xml
<CustomField>
    <fullName>Status_Lease__c</fullName>
    <label>Status Lease</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Marketing Scrub</fullName>
            </value>
            <value>
                <fullName>Do Not Solicit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>