unpackaged/main/default/objects/Lead/fields/Status_ML__c.field-meta.xml
<CustomField>
    <fullName>Status_ML__c</fullName>
    <label>Status ML</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>