unpackaged/main/default/objects/Lead/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>