unpackaged/main/default/objects/Lead/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <label>Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>