unpackaged/main/default/objects/Lead/fields/Sweep_Exception_Decision__c.field-meta.xml
<CustomField>
    <fullName>Sweep_Exception_Decision__c</fullName>
    <description>This field will be available to sales managers and above only. This field will determine if an exception to the sweep rule will be approved and a month added to the sweep date of the record.</description>
    <inlineHelpText>This field will be available to sales managers and above only. This field will determine if an exception to the sweep rule will be approved and a month added to the sweep date of the record.</inlineHelpText>
    <label>Sweep Exception Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>