unpackaged/main/default/objects/Lead/fields/Sweep_Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>Sweep_Exception_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used as an indicator if the rep wants request an exception to keep a lead 1 month after the sweep date because the customer is close to starting a deal.</description>
    <inlineHelpText>Check this box if you would like a sweep date exception. Must be done at least 1 day prior to month end.</inlineHelpText>
    <label>Sweep Exception Request</label>
    <type>Checkbox</type>
</CustomField>