unpackaged/main/default/objects/Lead/fields/Sync_With_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate the records that should be synced with Marketo.</description>
    <inlineHelpText>This field will indicate the records that should be synced with Marketo.</inlineHelpText>
    <label>Sync With Marketo</label>
    <type>Checkbox</type>
</CustomField>