unpackaged/main/default/objects/Lead/fields/Time_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Business__c</fullName>
    <description>Used to capture a customer's time in business as submitted through a web form.</description>
    <inlineHelpText>How long the company has been in business as reported by customer on web form.</inlineHelpText>
    <label>Time in Business (new)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 years or longer</fullName>
            </value>
            <value>
                <fullName>5-9 years</fullName>
            </value>
            <value>
                <fullName>2-4 years</fullName>
            </value>
            <value>
                <fullName>6 months – 1 year</fullName>
            </value>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>